@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-10-22
+ * Add v-autosavedelay to increase timeout on autosave
+
 2019-10-11
  * Added a bury command to wingman.
 
